--- a/windup-core/windup-engine-cdi/pom.xml
+++ b/windup-core/windup-engine-cdi/pom.xml
@@ -124,5 +124,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jadretro</groupId>
+			<artifactId>jadretro</artifactId>
+			<version>1.6.1</version>
+		</dependency>
 	</dependencies>
 </project>
