--- a/windup-plugins/windup-nexus/pom.xml
+++ b/windup-plugins/windup-nexus/pom.xml
@@ -6,11 +6,39 @@
     <version>0.7.0</version>
   </parent>
   <artifactId>windup-nexus</artifactId>
+  <properties>
+  	<aetherVersion>0.9.0.M4</aetherVersion>
+  </properties>
   <dependencies>
   	<dependency>
-  		<groupId>org.sonatype.nexus.client</groupId>
-  		<artifactId>nexus-client-core</artifactId>
-  		<version>2.5.1-01</version>
-  	</dependency>
+  	      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-api</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-spi</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-util</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-impl</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-connector-file</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-connector-wagon</artifactId>
+      <version>${aetherVersion}</version>
+    </dependency>
   </dependencies>
 </project>
