--- a/windup-core/windup-utils/pom.xml
+++ b/windup-core/windup-utils/pom.xml
@@ -19,5 +19,10 @@
   		<version>1.7.5</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.4</version>
+  	</dependency>
   </dependencies>
 </project>
