--- a/engine/rules/impl/pom.xml
+++ b/engine/rules/impl/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.19</version>
+            <version>${version.freemarker}</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
