NPE at org.apache.maven.DefaultMaven.doExecute(DefaultMaven.java:270)

--- a/sample-apps/pom.xml
+++ b/sample-apps/pom.xml
@@ -19,5 +19,6 @@
     <modules>
         <module>windup-regression-test</module>
         <module>jee-example-jboss</module>
+        <module>jee-example-weblogic</module>
     </modules>
 </project>
